--- a/config/enki.yml
+++ b/config/enki.yml
@@ -1,6 +1,7 @@
 # Configuration options for your blog - customise to taste
 # This file contains no secret information, so can be stored in source control (unlike database.yml)
 title: Digital Drip
+subtitle: The Tech Blog of Jon Gaudette
 url:   http://www.digital-drip.com
 author:
   name:    Jon Gaudette        # For copyright notice and ATOM feeds
