--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,16 @@ test:
   database: db/test.sqlite3
   timeout: 5000
 
+staging:
+  adapter: mysql
+  database: ddrip
+  pool: 5
+  username: jon
+  password: password
+  socket: /var/run/mysqld/mysqld.sock
+  reconnect: true
+  timeout: 5000
+
 production:
   adapter: mysql
   database: ddrip
